2024-06-15  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml (jobs): Update to r-ci-setup action

2024-05-18  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Use tinyverse.netlify.app for dependency badge

2024-01-11  Jeroen Ooms  <jeroenooms@gmail.com>

	* src/Makevars.in: Export CC and CXX to support cross-compilation

2024-01-05  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v4

2023-05-11  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.2

	* src/Makevars.win: Added, with fixed cmake setting

2023-05-10  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date

	* configure: Detect cmake even on the marvel that is macOS
	* src/Makevars.in: Switched from Makevars, cmake filled in
	* cleanup: Also remove (now generated) src/Makevars

2023-05-08  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date

	* src/crc32c/CMakeLists.txt: Ensure static libraries are compiled
	with position independent property set

	* README.md: Add CI, CRAN and Dependcies badges

2023-05-07  Dirk Eddelbuettel  <edd@debian.org>

	* Initial release 0.0.1

	* src/crc32c/: Include upstream version 1.1.2

	* inst/include/crc32cAPI.h: Added API header
	* src/init.c: Added corresponding initialization
	* src/crc32c.cpp: Added minimal (vectorised) example
	* R/crc32c.R: Added R caller of example
	* man/crc32c.Rd: Added documentation
	* tests/check.R: Added minimal checks

        * DESCRIPTION: Generated via kitten() as R package
        * NAMESPACE: Idem
        * man/crc32c-package.Rd: Idem